--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,8 +18,10 @@
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
