--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.5",
