End of section 21

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
@@ -34,6 +35,7 @@
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.7",
+    "@types/react-infinite-scroller": "^1.2.5",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
